overflow issue solved

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 body {
   font-family: "Solway", serif;
   box-sizing: border-box;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 .container {
